Bug fix
Fixed a bug that was causing the send button to not line up with the input field.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -166,7 +166,7 @@ h1 {
 }
 
 #messageInput {
-    width: 100%;
+    width: calc(100% - 56px);
     background-color: #DDCECC;
     font-size: 1em;
     padding: 2px 80px 2px 6px;
@@ -179,15 +179,15 @@ h1 {
 }
 
 #sendMessageSubmitButton {
-    position: relative;
+    /* position: relative;
     top: -24px;
-    right: 2px;
-    height: 22px;
+    right: 2px; */
+    height: 26px;
     font-size: 1em;
     color: #DDCECC;
     font-weight: 600;
     cursor: pointer;
-    border: none;
+    border: 2px solid #6D524F;
     float: right;
     background-color: #6C648B;
     box-sizing: border-box;
